# skill-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DYNAMIC_SELECTION.md  Dockerfile  QUICKSTART-AZURE.md  README.md  pyproject.toml  requirements.txt  startup.sh  test_langgraph_basic.py  test_langgraph_comparison.py
.claude/: 02-LANGGRAPH_MIGRATION.md  04-DEPLOYMENT.md  06-CONTAINER-APPS-DEPLOYMENT.md  07-INTEGRATION_TEST_REPORT.md
.github/workflows/: azure-deploy.yml  ci.yml  container-apps-deploy.yml  skill-agent-app-AutoDeployTrigger-38456ebb-16b5-4092-90d2-bde69931e8c1.yml
app/: __init__.py  main.py
app/core/: config.py  exceptions.py  security.py
app/models/: __init__.py  events.py  execution.py  schema.py  skill.py
app/services/: executor.py  git_loader.py  graph_executor.py  llm_client.py  skill_registry.py
infra/: container-apps.bicep  main.json
postman/: README.md  Skill-Agent-Azure.postman_collection.json  Skill-Agent-Azure.postman_environment.json
scripts/: deploy-container-apps.sh  setup-azure.sh
skills-library/entity_extractor/: models.py  schema.json
skills-library/example_extraction/: models.py  schema.json
skills-library/hello_world/: models.py  schema.json
skills-library/metadata_extractor/: models.py  schema.json
skills-library/summarizer/: models.py  schema.json
skills-library/valuation_report_analyzer/: models.py  (+1 more)
tests/: conftest.py  integration_azure_test.py  test_api.py  test_executor.py  test_git_loader.py  test_langgraph_basic.py  test_langgraph_comparison.py  test_models.py  test_registry.py
(+17 files in other folders)
